# connector-smtp

./: README.md  pyproject.toml  write_connector.md
bpmn/: send_email.bpmn
src/connector_smtp/commands/: sendEmail.py  send_email.py
